--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,7 +16,7 @@ jobs:
   go:
     uses: ./.github/workflows/go-ci.yml
     with:
-      GO_VERSION: ${{ GO_VERSION }}
+      GO_VERSION: ${{ env.GO_VERSION }}
 
   publish:
     needs: go
@@ -32,7 +32,7 @@ jobs:
 
       - uses: actions/setup-go@v2
         with:
-          go-version: ${{ GO_VERSION }}
+          go-version: ${{ env.GO_VERSION }}
 
       - uses: goreleaser/goreleaser-action@v5
         with:
