--- a/.github/workflows/go-ci.yml
+++ b/.github/workflows/go-ci.yml
@@ -3,6 +3,9 @@ name: Go CI
 on:
   workflow_call:
 
+env:
+  GO_VERSION: '1.21'
+
 concurrency:
   group: ${{ github.workflow }}-${{ github.head_ref || github.run_id }}
   cancel-in-progress: true
