--- a/.github/workflows/go-ci.yml
+++ b/.github/workflows/go-ci.yml
@@ -2,9 +2,11 @@ name: Go CI
 
 on:
   workflow_call:
-
-env:
-  GO_VERSION: '1.21'
+    inputs:
+      go-version:
+        description: 'Go version'
+        required: true
+        type: string
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.head_ref || github.run_id }}
@@ -20,7 +22,7 @@ jobs:
 
       - uses: actions/setup-go@v4
         with:
-          go-version: ${{ env.GO_VERSION }}
+          go-version: ${{ inputs.go-version }}
 
       - name: golangci-lint
         uses: golangci/golangci-lint-action@v3.7.0
@@ -36,7 +38,7 @@ jobs:
 
       - uses: actions/setup-go@v4
         with:
-          go-version: ${{ env.GO_VERSION }}
+          go-version: ${{ inputs.go-version }}
 
       - run: go mod tidy
 
