--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,11 +9,14 @@ on:
       - "v*"
   pull_request:
 
+env:
+  GO_VERSION: '1.21'
+
 jobs:
   go:
     uses: ./.github/workflows/go-ci.yml
     with:
-      go-version: 1.21
+      go-version: ${{ env.GO_VERSION }}
 
   publish:
     needs: go
@@ -29,7 +32,7 @@ jobs:
 
       - uses: actions/setup-go@v2
         with:
-          go-version: 1.21
+          go-version: ${{ env.GO_VERSION }}
 
       - uses: goreleaser/goreleaser-action@v5
         with:
