--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,14 +9,11 @@ on:
       - "v*"
   pull_request:
 
-env:
-  GO_VERSION: '1.21'
-
 jobs:
   go:
     uses: ./.github/workflows/go-ci.yml
     with:
-      go-version: "${{ env.GO_VERSION }}"
+      go-version: 1.21
 
   publish:
     needs: go
@@ -32,7 +29,7 @@ jobs:
 
       - uses: actions/setup-go@v2
         with:
-          go-version: "${{ env.GO_VERSION }}"
+          go-version: 1.21
 
       - uses: goreleaser/goreleaser-action@v5
         with:
