--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,23 +12,19 @@ on:
 jobs:
   setup:
       runs-on: ubuntu-latest
-      inputs:
-        go-version:
-          description: 'Go version'
-          required: true
-          type: string
-          default: '1.21'
+      env:
+        GO_VERSION: 1.21
       outputs:
-        go_version: ${{ steps.set-vars.outputs.go-version }}
+        go-version: ${{ steps.set-vars.outputs.go-version }}
       steps:
       - id: set-vars
-        run: echo "::set-output name=go-version::${{ inputs.go-version }}"
+        run: echo "::set-output name=go-version::${{ env.GO_VERSION }}"
 
   go:
     needs: setup
     uses: ./.github/workflows/go-ci.yml
     with:
-      go-version: ${{ needs.setup.outputs.go_version }}
+      go-version: ${{ needs.setup.outputs.go-version }}
 
   publish:
     needs: go
@@ -44,7 +40,7 @@ jobs:
 
       - uses: actions/setup-go@v2
         with:
-          go-version: ${{ needs.setup.outputs.go_version }}
+          go-version: ${{ needs.setup.outputs.go-version }}
 
       - uses: goreleaser/goreleaser-action@v5
         with:
