--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,7 +18,7 @@ jobs:
         go-version: ${{ steps.set-vars.outputs.go-version }}
       steps:
       - id: set-vars
-        run: echo "::set-output name=go-version::${{ env.GO_VERSION }}"
+        run: echo "go-version=${{env.GO_VERSION}}" >> "$GITHUB_OUTPUT"
 
   go:
     needs: setup
