--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,8 +12,13 @@ on:
 jobs:
   setup:
       runs-on: ubuntu-latest
+      env:
+        GO_VERSION: 1.21
       outputs:
-        go-version: 1.21
+        go-version: ${{ steps.set-vars.outputs.go-version }}
+      steps:
+      - id: set-vars
+        run: echo "go-version=${{env.GO_VERSION}}" >> "$GITHUB_OUTPUT"
 
   go:
     needs: setup
