--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,14 +11,15 @@ on:
 
 jobs:
   setup:
-      runs-on: ubuntu-latest
-      env:
-        GO_VERSION: 1.21
-      outputs:
-        go-version: ${{ steps.set-vars.outputs.go-version }}
-      steps:
-      - id: set-vars
-        run: echo "go-version=${{env.GO_VERSION}}" >> "$GITHUB_OUTPUT"
+    if: ${{ github.actor != 'dependabot[bot]' }}
+    runs-on: ubuntu-latest
+    env:
+      GO_VERSION: 1.21
+    outputs:
+      go-version: ${{ steps.set-vars.outputs.go-version }}
+    steps:
+    - id: set-vars
+      run: echo "go-version=${{env.GO_VERSION}}" >> "$GITHUB_OUTPUT"
 
   go:
     needs: setup
