--- a/.github/workflows/go-ci.yml
+++ b/.github/workflows/go-ci.yml
@@ -13,21 +13,24 @@ concurrency:
   cancel-in-progress: true
 
 jobs:
-  # lint:
-  #   name: Lint
-  #   runs-on: ubuntu-latest
+  lint:
+    name: Lint
+    runs-on: ubuntu-latest
 
-  #   steps:
-  #     - uses: actions/checkout@v3
+    steps:
+      - uses: actions/checkout@v3
 
-  #     - uses: actions/setup-go@v4
-  #       with:
-  #         go-version: ${{ inputs.go-version }}
+      - uses: actions/setup-go@v4
+        env:
+          GO111MODULE: off
+        with:
+          cache: false
+          go-version: ${{ inputs.go-version }}
 
-  #     - name: golangci-lint
-  #       uses: golangci/golangci-lint-action@v3.7.0
-  #       with:
-  #         version: v1.54.2
+      - name: golangci-lint
+        uses: golangci/golangci-lint-action@v3
+        with:
+          version: v1.54
 
   go_mod_tidy_check:
     name: Go Mod Tidy Check
