--- a/.github/workflows/go-ci.yml
+++ b/.github/workflows/go-ci.yml
@@ -30,6 +30,8 @@ jobs:
       - name: golangci-lint
         uses: golangci/golangci-lint-action@v3
         with:
+          skip-go-installation: true
+          args: --timeout 3m --verbose
           version: v1.54
 
   go_mod_tidy_check:
