--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,13 +8,23 @@ on:
     tags:
       - "v*"
   pull_request:
+  workflow_dispatch:
+  # Inputs the workflow accepts.
+    inputs:
+      go-version:
+        description: "Go version to use for the workflow"
+        required: true
+        type: string
+        # update the go-version here to the latest version
+        # throughout the pipeline
+        default: 1.21
 
 jobs:
   setup:
     if: ${{ github.actor != 'dependabot[bot]' }}
     runs-on: ubuntu-latest
     env:
-      GO_VERSION: 1.21
+      GO_VERSION: ${{ github.event.inputs.go-version }}
     outputs:
       go-version: ${{ steps.set-vars.outputs.go-version }}
     steps:
