--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,23 +8,13 @@ on:
     tags:
       - "v*"
   pull_request:
-  workflow_dispatch:
-  # Inputs the workflow accepts.
-    inputs:
-      go-version:
-        description: "Go version to use for the workflow"
-        required: true
-        type: string
-        # update the go-version here to the latest version
-        # throughout the pipeline
-        default: 1.21
 
 jobs:
   setup:
     if: ${{ github.actor != 'dependabot[bot]' }}
     runs-on: ubuntu-latest
     env:
-      GO_VERSION: ${{ github.event.inputs.go-version }}
+      GO_VERSION: 1.21
     outputs:
       go-version: ${{ steps.set-vars.outputs.go-version }}
     steps:
