--- a/.github/workflows/go-ci.yml
+++ b/.github/workflows/go-ci.yml
@@ -34,6 +34,9 @@ jobs:
         with:
           args: --timeout 8m --verbose
           version: v1.54
+          skip-go-installation: true
+          skip-pkg-cache: true
+          skip-build-cache: true
 
   go_mod_tidy_check:
     name: Go Mod Tidy Check
@@ -51,4 +54,22 @@ jobs:
       - name: check for diff
         run: git diff --exit-code
 
+    test:
+      name: Unit tests
+      runs-on: ubuntu-latest
+
+      steps:
+        - uses: actions/checkout@v3
+
+        - uses: actions/setup-go@v4
+          with:
+            go-version: ${{ inputs.go-version }}
+
+        - name: Run tests
+          run: go test -coverprofile=coverage.txt -covermode=atomic ./...
+
+        - name: Upload coverage reports to Codecov
+          uses: codecov/codecov-action@v3
+          env:
+            CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
 
