--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,9 +27,9 @@ jobs:
   #   with:
   #     go-version: ${{ needs.setup.outputs.go-version }}
 
-  # publish:
-  #   needs: go
-  #   uses: ./.github/workflows/publish.yml
+  publish:
+    needs: go
+    uses: ./.github/workflows/publish.yml
 
   release:
     name: Release
@@ -38,6 +38,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+
+      - run: |
+          echo ${{ needs.setup.outputs.go-version }}
 
       - uses: actions/setup-go@v4
         with:
