--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,10 +11,9 @@ on:
 
 jobs:
   setup:
-    if: ${{ github.actor != 'dependabot[bot]' }}
     runs-on: ubuntu-latest
     env:
-      GO_VERSION: 1.21
+      GO_VERSION: "1.21"
     outputs:
       go-version: ${{ steps.set-vars.outputs.go-version }}
     steps:
