--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,13 +13,13 @@ jobs:
   setup:
     runs-on: ubuntu-latest
     env:
-      GO_VERSION: "1.21"
+      GO_VERSION: 1.21
     outputs:
       go-version: ${{ steps.set-vars.outputs.go-version }}
     steps:
       - id: set-vars
         run: |
-          echo $${{ env.GO_VERSION }}
+          echo "${{ env.GO_VERSION }}"
           echo "go-version=${{env.GO_VERSION}}" >> "$GITHUB_OUTPUT"
 
   # go:
