target main function

--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -14,11 +14,12 @@ before:
     - go generate ./...
 
 builds:
-  - env:
-      - CGO_ENABLED=0
-    goos:
-      - linux
-      - darwin
+  main: ./cmd/waypoint/
+  env:
+    - CGO_ENABLED=0
+  goos:
+    - linux
+    - darwin
 
 archives:
   - format: tar.gz
