--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -35,7 +35,18 @@ archives:
     format_overrides:
       - goos: windows
         format: zip
-
+signs:
+  - artifacts: checksum
+    args:
+      [
+        "--batch",
+        "-u",
+        "{{ .Env.GPG_FINGERPRINT }}",
+        "--output",
+        "${signature}",
+        "--detach-sign",
+        "${artifact}",
+      ]
 changelog:
   sort: asc
   filters:
