--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,17 +20,16 @@ jobs:
     steps:
       - id: set-vars
         run: |
-          echo "${{ env.GO_VERSION }}"
           echo "go-version=${{env.GO_VERSION}}" >> "$GITHUB_OUTPUT"
 
-  # go:
-  #   needs: setup
-  #   uses: ./.github/workflows/go-ci.yml
-  #   with:
-  #     go-version: ${{ needs.setup.outputs.go-version }}
+  go:
+    needs: setup
+    uses: ./.github/workflows/go-ci.yml
+    with:
+      go-version: ${{ needs.setup.outputs.go-version }}
 
   publish:
-    # needs: go
+    needs: go
     uses: ./.github/workflows/publish.yml
 
   release:
@@ -41,16 +40,13 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
-      - run: |
-          echo ${{ needs.setup.outputs.go-version }}
-
       - uses: actions/setup-go@v4
         with:
           go-version: ${{ needs.setup.outputs.go-version }}
 
       - name: Import GPG key
         id: import_gpg
-        uses: crazy-max/ghaction-import-gpg@v4
+        uses: crazy-max/ghaction-import-gpg@v6
         with:
           gpg_private_key: ${{ secrets.GPG_KEY }}
           passphrase: ${{ secrets.GPG_PASSPHRASE }}
