--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,16 +12,27 @@ on:
 jobs:
   setup:
     runs-on: ubuntu-latest
-    env:
-      GO_VERSION: 1.21
     outputs:
-      go-version: ${{ steps.set-vars.outputs.go-version }}
+      go-version: ${{ steps.read-go-version.outputs.go-version }}
 
     steps:
-      - id: set-vars
-        run: |
-          echo "go-version=${{env.GO_VERSION}}" >> "$GITHUB_OUTPUT"
+      - name: Checkout code
+        uses: actions/checkout@v4
 
+      - name: debug .go-version file
+        run: cat .go-version
+
+      - name: Read .go-version file
+        id: read-go-version
+        run: |
+          echo "go-version=$(cat .go-version)" >> $GITHUB_ENV
+
+  debug:
+    needs: [setup]
+    runs-on: ubuntu-latest
+    steps:
+      - run: |
+          echo ${{ needs.setup.outputs.go-version }}
   go:
     needs: setup
     uses: ./.github/workflows/go-ci.yml
