--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,7 +25,7 @@ jobs:
       - name: Read .go-version file
         id: read-go-version
         run: |
-          echo "go-version=1.21" >> $GITHUB_ENV
+          echo "go-version=(cat .go-version)" >> $GITHUB_OUTPUT
 
   debug:
     needs: [setup]
