--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -24,6 +24,9 @@ builds:
 release:
   prerelease: auto
 
+git:
+  prerelease_suffix: -rc*
+
 archives:
   - format: tar.gz
     # this name template makes the OS and Arch compatible with the results of `uname`.
